force-app/main/default/objects/Volunteer_Event__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
    <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
    <label>End</label>
    <type>DateTime</type>
</CustomField>