force-app/main/default/objects/Volunteer_Event__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
    <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>